# folium-map-search

./: .bumpversion.cfg  .eslintrc.json  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  formate.toml  index.html  justfile  package.json  pyproject.toml  repo_helper.yml  requirements.txt  test.py  tox.ini  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
folium_map_search/: __init__.py  folium-map-search.bundle.js  folium-map-search.bundle.js.map  folium-map-search.js  folium-map-search.js.map  microfuzz.js  microfuzz.js.map  providers.py
src/: main.ts  provider.ts  searchcontrol.ts
src/microfuzz/: impl.ts  index.ts  normalizeText.ts
